Revert "Replace use of deprecated Float(double) constructor"
This reverts commit 043d58fe22c1b707bf425ac72144e0ec89f860d5.